@@ -159,8 +159,8 @@ public class BrowserLauncher {
 	private static final int OTHER = -1;
 
 	/**
-	 * The file type of the Finder on a Macintosh. Hardcoding "Finder" would
-	 * keep non-U.S. English systems from working properly.
+	 * The file type of the Finder on a Macintosh. Hardcoding "Finder" would keep
+	 * non-U.S. English systems from working properly.
 	 */
 	private static final String FINDER_TYPE = "FNDR";
 
@@ -204,8 +204,8 @@ public class BrowserLauncher {
 	private static String errorMessage;
 
 	/**
-	 * An initialization block that determines the operating system and loads
-	 * the necessary runtime data.
+	 * An initialization block that determines the operating system and loads the
+	 * necessary runtime data.
 	 */
 	static {
 		loadedWithoutErrors = true;
@@ -219,8 +219,7 @@ public class BrowserLauncher {
 			} else {
 				String majorMRJVersion = mrjVersion.substring(0, 3);
 				try {
-					double version = Double.valueOf(majorMRJVersion)
-							.doubleValue();
+					double version = Double.valueOf(majorMRJVersion).doubleValue();
 					if (version == 2) {
 						jvm = MRJ_2_0;
 					} else if (version >= 2.1 && version < 3) {
@@ -277,39 +276,26 @@ public class BrowserLauncher {
 		switch (jvm) {
 		case MRJ_2_0:
 			try {
-				Class<?> aeTargetClass = Class
-						.forName("com.apple.MacOS.AETarget");
-				Class<?> osUtilsClass = Class
-						.forName("com.apple.MacOS.OSUtils");
-				Class<?> appleEventClass = Class
-						.forName("com.apple.MacOS.AppleEvent");
+				Class<?> aeTargetClass = Class.forName("com.apple.MacOS.AETarget");
+				Class<?> osUtilsClass = Class.forName("com.apple.MacOS.OSUtils");
+				Class<?> appleEventClass = Class.forName("com.apple.MacOS.AppleEvent");
 				Class<?> aeClass = Class.forName("com.apple.MacOS.ae");
 				aeDescClass = Class.forName("com.apple.MacOS.AEDesc");
 
-				aeTargetConstructor = aeTargetClass
-						.getDeclaredConstructor(new Class[] { int.class });
-				appleEventConstructor = appleEventClass
-						.getDeclaredConstructor(new Class[] { int.class,
-								int.class, aeTargetClass, int.class, int.class });
-				aeDescConstructor = aeDescClass
-						.getDeclaredConstructor(new Class[] { String.class });
+				aeTargetConstructor = aeTargetClass.getDeclaredConstructor(new Class[] { int.class });
+				appleEventConstructor = appleEventClass.getDeclaredConstructor(new Class[] { int.class, int.class, aeTargetClass, int.class,
+						int.class });
+				aeDescConstructor = aeDescClass.getDeclaredConstructor(new Class[] { String.class });
 
-				makeOSType = osUtilsClass.getDeclaredMethod("makeOSType",
-						new Class[] { String.class });
-				putParameter = appleEventClass.getDeclaredMethod(
-						"putParameter", new Class[] { int.class, aeDescClass });
-				sendNoReply = appleEventClass.getDeclaredMethod("sendNoReply",
-						new Class[] {});
+				makeOSType = osUtilsClass.getDeclaredMethod("makeOSType", new Class[] { String.class });
+				putParameter = appleEventClass.getDeclaredMethod("putParameter", new Class[] { int.class, aeDescClass });
+				sendNoReply = appleEventClass.getDeclaredMethod("sendNoReply", new Class[] {});
 
-				Field keyDirectObjectField = aeClass
-						.getDeclaredField("keyDirectObject");
+				Field keyDirectObjectField = aeClass.getDeclaredField("keyDirectObject");
 				keyDirectObject = (Integer) keyDirectObjectField.get(null);
-				Field autoGenerateReturnIDField = appleEventClass
-						.getDeclaredField("kAutoGenerateReturnID");
-				kAutoGenerateReturnID = (Integer) autoGenerateReturnIDField
-						.get(null);
-				Field anyTransactionIDField = appleEventClass
-						.getDeclaredField("kAnyTransactionID");
+				Field autoGenerateReturnIDField = appleEventClass.getDeclaredField("kAutoGenerateReturnID");
+				kAutoGenerateReturnID = (Integer) autoGenerateReturnIDField.get(null);
+				Field anyTransactionIDField = appleEventClass.getDeclaredField("kAnyTransactionID");
 				kAnyTransactionID = (Integer) anyTransactionIDField.get(null);
 			} catch (ClassNotFoundException cnfe) {
 				errorMessage = cnfe.getMessage();
@@ -329,15 +315,11 @@ public class BrowserLauncher {
 			try {
 				mrjFileUtilsClass = Class.forName("com.apple.mrj.MRJFileUtils");
 				mrjOSTypeClass = Class.forName("com.apple.mrj.MRJOSType");
-				Field systemFolderField = mrjFileUtilsClass
-						.getDeclaredField("kSystemFolderType");
+				Field systemFolderField = mrjFileUtilsClass.getDeclaredField("kSystemFolderType");
 				kSystemFolderType = systemFolderField.get(null);
-				findFolder = mrjFileUtilsClass.getDeclaredMethod("findFolder",
-						new Class[] { mrjOSTypeClass });
-				getFileCreator = mrjFileUtilsClass.getDeclaredMethod(
-						"getFileCreator", new Class[] { File.class });
-				getFileType = mrjFileUtilsClass.getDeclaredMethod(
-						"getFileType", new Class[] { File.class });
+				findFolder = mrjFileUtilsClass.getDeclaredMethod("findFolder", new Class[] { mrjOSTypeClass });
+				getFileCreator = mrjFileUtilsClass.getDeclaredMethod("getFileCreator", new Class[] { File.class });
+				getFileType = mrjFileUtilsClass.getDeclaredMethod("getFileType", new Class[] { File.class });
 			} catch (ClassNotFoundException cnfe) {
 				errorMessage = cnfe.getMessage();
 				return false;
@@ -358,10 +340,8 @@ public class BrowserLauncher {
 		case MRJ_3_0:
 			try {
 				Class<?> linker = Class.forName("com.apple.mrj.jdirect.Linker");
-				Constructor<?> constructor = linker
-						.getConstructor(new Class<?>[] { Class.class });
-				linkage = constructor
-						.newInstance(new Object[] { BrowserLauncher.class });
+				Constructor<?> constructor = linker.getConstructor(new Class<?>[] { Class.class });
+				linkage = constructor.newInstance(new Object[] { BrowserLauncher.class });
 			} catch (ClassNotFoundException cnfe) {
 				errorMessage = cnfe.getMessage();
 				return false;
@@ -382,8 +362,7 @@ public class BrowserLauncher {
 		case MRJ_3_1:
 			try {
 				mrjFileUtilsClass = Class.forName("com.apple.mrj.MRJFileUtils");
-				openURL = mrjFileUtilsClass.getDeclaredMethod("openURL",
-						new Class<?>[] { String.class });
+				openURL = mrjFileUtilsClass.getDeclaredMethod("openURL", new Class<?>[] { String.class });
 			} catch (ClassNotFoundException cnfe) {
 				errorMessage = cnfe.getMessage();
 				return false;
@@ -400,8 +379,8 @@ public class BrowserLauncher {
 
 	/**
 	 * Attempts to locate the default web browser on the local system. Caches
-	 * results so it only locates the browser once for each use of this class
-	 * per JVM instance.
+	 * results so it only locates the browser once for each use of this class per
+	 * JVM instance.
 	 * 
 	 * @return The browser for the system. Note that this may not be what you
 	 *         would consider to be a standard web browser; instead, it's the
@@ -416,16 +395,11 @@ public class BrowserLauncher {
 		switch (jvm) {
 		case MRJ_2_0:
 			try {
-				Integer finderCreatorCode = (Integer) makeOSType.invoke(null,
-						new Object[] { FINDER_CREATOR });
-				Object aeTarget = aeTargetConstructor
-						.newInstance(new Object[] { finderCreatorCode });
-				Integer gurlType = (Integer) makeOSType.invoke(null,
-						new Object[] { GURL_EVENT });
-				Object appleEvent = appleEventConstructor
-						.newInstance(new Object[] { gurlType, gurlType,
-								aeTarget, kAutoGenerateReturnID,
-								kAnyTransactionID });
+				Integer finderCreatorCode = (Integer) makeOSType.invoke(null, new Object[] { FINDER_CREATOR });
+				Object aeTarget = aeTargetConstructor.newInstance(new Object[] { finderCreatorCode });
+				Integer gurlType = (Integer) makeOSType.invoke(null, new Object[] { GURL_EVENT });
+				Object appleEvent = appleEventConstructor.newInstance(new Object[] { gurlType, gurlType, aeTarget, kAutoGenerateReturnID,
+						kAnyTransactionID });
 				// Don't set browser = appleEvent because then the next time we
 				// call
 				// locateBrowser(), we'll get the same AppleEvent, to which
@@ -452,8 +426,7 @@ public class BrowserLauncher {
 		case MRJ_2_1:
 			File systemFolder;
 			try {
-				systemFolder = (File) findFolder.invoke(null,
-						new Object[] { kSystemFolderType });
+				systemFolder = (File) findFolder.invoke(null, new Object[] { kSystemFolderType });
 			} catch (IllegalArgumentException iare) {
 				browser = null;
 				errorMessage = iare.getMessage();
@@ -464,8 +437,7 @@ public class BrowserLauncher {
 				return browser;
 			} catch (InvocationTargetException ite) {
 				browser = null;
-				errorMessage = ite.getTargetException().getClass() + ": "
-						+ ite.getTargetException().getMessage();
+				errorMessage = ite.getTargetException().getClass() + ": " + ite.getTargetException().getMessage();
 				return browser;
 			}
 			String[] systemFolderFiles = systemFolder.list();
@@ -483,14 +455,12 @@ public class BrowserLauncher {
 					// applications being picked up on certain Mac OS 9 systems,
 					// especially German ones, and sending a GURL event to those
 					// applications results in a logout under Multiple Users.
-					Object fileType = getFileType.invoke(null,
-							new Object[] { file });
+					Object fileType = getFileType.invoke(null, new Object[] { file });
 					if (FINDER_TYPE.equals(fileType.toString())) {
-						Object fileCreator = getFileCreator.invoke(null,
-								new Object[] { file });
+						Object fileCreator = getFileCreator.invoke(null, new Object[] { file });
 						if (FINDER_CREATOR.equals(fileCreator.toString())) {
 							browser = file.toString(); // Actually the Finder,
-														// but that's OK
+							// but that's OK
 							return browser;
 						}
 					}
@@ -504,8 +474,7 @@ public class BrowserLauncher {
 					return browser;
 				} catch (InvocationTargetException ite) {
 					browser = null;
-					errorMessage = ite.getTargetException().getClass() + ": "
-							+ ite.getTargetException().getMessage();
+					errorMessage = ite.getTargetException().getClass() + ": " + ite.getTargetException().getMessage();
 					return browser;
 				}
 			}
@@ -533,14 +502,13 @@ public class BrowserLauncher {
 	 * Attempts to open the default web browser to the given URL.
 	 * 
 	 * @param url
-	 *            The URL to open
+	 *           The URL to open
 	 * @throws IOException
-	 *             If the web browser could not be located or does not run
+	 *            If the web browser could not be located or does not run
 	 */
 	public static void openURL(String url) throws IOException {
 		if (!loadedWithoutErrors) {
-			throw new IOException("Exception in finding browser: "
-					+ errorMessage);
+			throw new IOException("Exception in finding browser: " + errorMessage);
 		}
 		Object browser = locateBrowser();
 		if (browser == null) {
@@ -552,21 +520,14 @@ public class BrowserLauncher {
 			Object aeDesc = null;
 			try {
 				aeDesc = aeDescConstructor.newInstance(new Object[] { url });
-				putParameter.invoke(browser, new Object[] { keyDirectObject,
-						aeDesc });
+				putParameter.invoke(browser, new Object[] { keyDirectObject, aeDesc });
 				sendNoReply.invoke(browser, new Object[] {});
 			} catch (InvocationTargetException ite) {
-				throw new IOException(
-						"InvocationTargetException while creating AEDesc: "
-								+ ite.getMessage());
+				throw new IOException("InvocationTargetException while creating AEDesc: " + ite.getMessage());
 			} catch (IllegalAccessException iae) {
-				throw new IOException(
-						"IllegalAccessException while building AppleEvent: "
-								+ iae.getMessage());
+				throw new IOException("IllegalAccessException while building AppleEvent: " + iae.getMessage());
 			} catch (InstantiationException ie) {
-				throw new IOException(
-						"InstantiationException while creating AEDesc: "
-								+ ie.getMessage());
+				throw new IOException("InstantiationException while creating AEDesc: " + ie.getMessage());
 			} finally {
 				aeDesc = null; // Encourage it to get disposed if it was created
 				browser = null; // Ditto
@@ -582,8 +543,7 @@ public class BrowserLauncher {
 				int[] selectionStart = new int[] { 0 };
 				byte[] urlBytes = url.getBytes();
 				int[] selectionEnd = new int[] { urlBytes.length };
-				result = ICLaunchURL(instance[0], new byte[] { 0 }, urlBytes,
-						urlBytes.length, selectionStart, selectionEnd);
+				result = ICLaunchURL(instance[0], new byte[] { 0 }, urlBytes, urlBytes.length, selectionStart, selectionEnd);
 				if (result == 0) {
 					// Ignore the return value; the URL was launched
 					// successfully
@@ -593,31 +553,24 @@ public class BrowserLauncher {
 					throw new IOException("Unable to launch URL: " + result);
 				}
 			} else {
-				throw new IOException(
-						"Unable to create an Internet Config instance: "
-								+ result);
+				throw new IOException("Unable to create an Internet Config instance: " + result);
 			}
 			break;
 		case MRJ_3_1:
 			try {
 				openURL.invoke(null, new Object[] { url });
 			} catch (InvocationTargetException ite) {
-				throw new IOException(
-						"InvocationTargetException while calling openURL: "
-								+ ite.getMessage());
+				throw new IOException("InvocationTargetException while calling openURL: " + ite.getMessage());
 			} catch (IllegalAccessException iae) {
-				throw new IOException(
-						"IllegalAccessException while calling openURL: "
-								+ iae.getMessage());
+				throw new IOException("IllegalAccessException while calling openURL: " + iae.getMessage());
 			}
 			break;
 		case WINDOWS_NT:
 		case WINDOWS_9x:
 			// Add quotes around the URL to allow ampersands and other special
 			// characters to work.
-			Process process = Runtime.getRuntime().exec(
-					new String[] { (String) browser, FIRST_WINDOWS_PARAMETER,
-							SECOND_WINDOWS_PARAMETER, THIRD_WINDOWS_PARAMETER,
+			Process process = Runtime.getRuntime()
+					.exec(new String[] { (String) browser, FIRST_WINDOWS_PARAMETER, SECOND_WINDOWS_PARAMETER, THIRD_WINDOWS_PARAMETER,
 							'"' + url + '"' });
 			// This avoids a memory leak on some versions of Java on Windows.
 			// That's hinted at in
@@ -626,9 +579,7 @@ public class BrowserLauncher {
 				process.waitFor();
 				process.exitValue();
 			} catch (InterruptedException ie) {
-				throw new IOException(
-						"InterruptedException while launching browser: "
-								+ ie.getMessage());
+				throw new IOException("InterruptedException while launching browser: " + ie.getMessage());
 			}
 			break;
 		case OTHER:
@@ -637,21 +588,15 @@ public class BrowserLauncher {
 			// First, attempt to open the URL in a currently running session of
 			// Netscape
 			process = Runtime.getRuntime().exec(
-					new String[] {
-							(String) browser,
-							NETSCAPE_REMOTE_PARAMETER,
-							NETSCAPE_OPEN_PARAMETER_START + url
-									+ NETSCAPE_OPEN_PARAMETER_END });
+					new String[] { (String) browser, NETSCAPE_REMOTE_PARAMETER,
+							NETSCAPE_OPEN_PARAMETER_START + url + NETSCAPE_OPEN_PARAMETER_END });
 			try {
 				int exitCode = process.waitFor();
 				if (exitCode != 0) { // if Netscape was not open
-					Runtime.getRuntime().exec(
-							new String[] { (String) browser, url });
+					Runtime.getRuntime().exec(new String[] { (String) browser, url });
 				}
 			} catch (InterruptedException ie) {
-				throw new IOException(
-						"InterruptedException while launching browser: "
-								+ ie.getMessage());
+				throw new IOException("InterruptedException while launching browser: " + ie.getMessage());
 			}
 			break;
 		default:
@@ -670,6 +615,5 @@ public class BrowserLauncher {
 
 	private native static int ICStop(int[] instance);
 
-	private native static int ICLaunchURL(int instance, byte[] hint,
-			byte[] data, int len, int[] selectionStart, int[] selectionEnd);
+	private native static int ICLaunchURL(int instance, byte[] hint, byte[] data, int len, int[] selectionStart, int[] selectionEnd);
 }
